Fix overflow again to allow for scroll

--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body, html {
-    overflow: hidden;
+    /* overflow: hidden; */
     padding: 0;
     margin: 0;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -8,7 +8,6 @@ body, html {
 .container {
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -28,6 +27,7 @@ body, html {
     border-top: solid 1px black;
     height: 20vh;
     display: flex;
+    overflow: hidden;
 }
 .scanner .finger-spot {
     margin: auto;
@@ -72,7 +72,7 @@ body, html {
 }
 
 .circle {
-    position: absolute;
+    position: fixed;
     transform-origin: center;
     height: 200px;
     width: 200px;
